--- a/fitting/confidence.html
+++ b/fitting/confidence.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>7.8. Advanced Confidence Intervals and Chi-square maps &#8212; larch 0.9.32 documentation</title>
+    <title>7.8. Advanced Confidence Intervals and Chi-square maps &#8212; larch 0.9.33 documentation</title>
     
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -15,10 +15,11 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.9.32',
+        VERSION:     '0.9.33',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true
+        HAS_SOURCE:  true,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
@@ -27,8 +28,6 @@
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="top" title="larch 0.9.32 documentation" href="../index.html" />
-    <link rel="up" title="7. Fitting and Modeling Data" href="index.html" />
     <link rel="next" title="8. XAFS Analysis" href="../xafs/index.html" />
     <link rel="prev" title="7.7. Simplified Peak Fitting with fit_peak()" href="fitpeaks.html" />
   <script type="text/x-mathjax-config">
@@ -100,7 +99,7 @@
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
-      <li><a href="../_sources/fitting/confidence.txt"
+      <li><a href="../_sources/fitting/confidence.rst.txt"
             rel="nofollow">Show Source</a></li>
     </ul>
    </div>
@@ -562,7 +561,7 @@ correlation, or when nearing a final analysis.</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.8.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.
     </div>
   </body>
 </html>
