--- a/genindex.html
+++ b/genindex.html
@@ -1,14 +1,14 @@
 
 
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &#8212; larch 0.9.33 documentation</title>
+    <title>Index &#8212; larch 0.9.34 documentation</title>
     
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.9.33',
+        VERSION:     '0.9.34',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
   <script type="text/x-mathjax-config">
@@ -35,7 +35,7 @@
   </script>
 
   </head>
-  <body role="document">
+  <body>
 <div style=" color: #c5daba;  text-align: left; height:65px; padding: 0px">
 <table border=1>
   <tr>
@@ -140,12 +140,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tutorial/procedures.html#index-0">_sys variables</a>
 </li>
-      <li><a href="fitting/parameters.html#index-0">_sys.paramGroup</a>
-
-      <ul>
-        <li><a href="xafs/feffpaths.html#index-5">with Feff paths</a>
+      <li><a href="fitting/parameters.html#index-0">_sys.fiteval</a>
 </li>
-      </ul></li>
+      <li><a href="xafs/feffpaths.html#index-5">_sys.fiteval with Feff paths</a>
+</li>
       <li><a href="xafs/autobk.html#module-_xafs">_xafs (module)</a>, <a href="xafs/diffkk.html#module-_xafs">[1]</a>, <a href="xafs/feffit.html#module-_xafs">[2]</a>, <a href="xafs/feffpaths.html#module-_xafs">[3]</a>, <a href="xafs/index.html#module-_xafs">[4]</a>, <a href="xafs/utilities.html#module-_xafs">[5]</a>, <a href="xafs/wavelets.html#module-_xafs">[6]</a>, <a href="xafs/xafsft.html#module-_xafs">[7]</a>
 </li>
       <li><a href="xray/index.html#module-_xray">_xray (module)</a>
@@ -316,6 +314,8 @@
 </li>
       <li><a href="xafs/feffpaths.html#index-0">Feff Path Parameters</a>
 </li>
+      <li><a href="xafs/feffpaths.html#_xafs.feff6l">feff6l() (in module _xafs)</a>
+</li>
       <li><a href="xafs/feffit.html#index-2">Feffit Output Arrays</a>
 </li>
       <li><a href="xafs/feffit.html#index-1">Feffit Output Statistics</a>
@@ -330,10 +330,10 @@
 </li>
       <li><a href="xafs/feffit.html#_xafs.feffit_transform">feffit_transform() (in module _xafs)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.feffpath">feffpath() (in module _xafs)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="xafs/feffpaths.html#_xafs.feffpath">feffpath() (in module _xafs)</a>
+</li>
       <li><a href="xafs/feffpaths.html#_xafs.feffrunner">feffrunner() (in module _xafs)</a>
 </li>
       <li><a href="xafs/feffpaths.html#_xafs.feffrunner.run">feffrunner.run() (in module _xafs)</a>
@@ -450,11 +450,9 @@
 </li>
       <li><a href="fitting/lineshapes.html#index-0">lineshapes for fitting</a>
 </li>
-      <li><a href="tutorial/builtins.html#list">list() (built-in function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="fitting/lineshapes.html#logistic">logistic() (built-in function)</a>
+      <li><a href="tutorial/builtins.html#list">list() (built-in function)</a>
 </li>
       <li><a href="fitting/lineshapes.html#lognormal">lognormal() (built-in function)</a>
 </li>
@@ -538,6 +536,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="fitting/parameters.html#_math.param">param() (in module _math)</a>
 </li>
+      <li><a href="fitting/parameters.html#_math.param_group">param_group() (in module _math)</a>
+</li>
       <li><a href="tutorial/builtins.html#parent">parent() (built-in function)</a>
 </li>
       <li><a href="xafs/feffpaths.html#_xafs.path2chi">path2chi() (in module _xafs)</a>
@@ -548,10 +548,10 @@
 </li>
       <li><a href="xafs/feffit.html#index-3">Phase-corrected Fourier transforms</a>, <a href="xafs/feffit.html#index-4">[1]</a>, <a href="xafs/feffit.html#index-5">[2]</a>
 </li>
-      <li><a href="plotting/index.html#_plotter.plot">plot() (in module _plotter)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="plotting/index.html#_plotter.plot">plot() (in module _plotter)</a>
+</li>
       <li><a href="plotting/index.html#_plotter.plot_arrow">plot_arrow() (in module _plotter)</a>
 </li>
       <li><a href="plotting/index.html#_plotter.plot_text">plot_text() (in module _plotter)</a>
@@ -588,10 +588,10 @@
 </li>
       <li><a href="data/index.html#_io.read_tiff">read_tiff() (in module _io)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="data/index.html#_io.read_xdi">read_xdi() (in module _io)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tutorial/builtins.html#reduce">reduce() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#reload">reload() (built-in function)</a>
@@ -599,6 +599,8 @@
       <li><a href="tutorial/builtins.html#repr">repr() (built-in function)</a>
 </li>
       <li><a href="devel/plugins.html#index-1">requirements.txt</a>
+</li>
+      <li><a href="fitting/parameters.html#_math.reset_fiteval">reset_fiteval() (in module _math)</a>
 </li>
       <li><a href="data/index.html#_io.restore">restore() (in module _io)</a>
 </li>
@@ -778,7 +780,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.2.
     </div>
   </body>
 </html>
