--- a/search.html
+++ b/search.html
@@ -5,20 +5,12 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Search &#8212; larch 0.9.35 documentation</title>
+    <title>Search &#8212; larch 0.9.37 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <script type="text/javascript">
-      var DOCUMENTATION_OPTIONS = {
-        URL_ROOT:    './',
-        VERSION:     '0.9.35',
-        COLLAPSE_INDEX: false,
-        FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true,
-        SOURCELINK_SUFFIX: '.txt'
-      };
-    </script>
+    <script type="text/javascript" src="_static/documentation_options.js"></script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
@@ -38,8 +30,7 @@
   </script>
 
 
-  </head>
-  <body>
+  </head><body>
 <div style=" color: #c5daba;  text-align: left; height:65px; padding: 0px">
 <table border=1>
   <tr>
@@ -63,13 +54,12 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
-   <li>[<a href="data/index.html">Reading Data</a>|</li>
-   <li><a href="plotting/index.html">Plotting</a>|</li>
-   <li><a href="fitting/index.html">Fitting Data</a>|</li>
+   <li>[<a href="index.html"> Larch Home</a>|</li>
+   <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
-   <li><a href="xray/index.html">Xray Databases</a>|</li>
+   <li><a href="xray/index.html">X-ray Databases</a>|</li>
    <li><a href="xrf/index.html">XRF Analysis</a>|</li>
-   <li><a href="devel/index.html">Scripting</a>]</li>
+   <li><a href="fitting/index.html">Curve Fitting</a>|</li>
  
       </ul>
     </div>
@@ -119,19 +109,18 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
-   <li>[<a href="data/index.html">Reading Data</a>|</li>
-   <li><a href="plotting/index.html">Plotting</a>|</li>
-   <li><a href="fitting/index.html">Fitting Data</a>|</li>
+   <li>[<a href="index.html"> Larch Home</a>|</li>
+   <li><a href="getting_started.html"> Getting Started</a>|</li>
    <li><a href="xafs/index.html">XAFS Analysis</a>|</li>
-   <li><a href="xray/index.html">Xray Databases</a>|</li>
+   <li><a href="xray/index.html">X-ray Databases</a>|</li>
    <li><a href="xrf/index.html">XRF Analysis</a>|</li>
-   <li><a href="devel/index.html">Scripting</a>]</li>
+   <li><a href="fitting/index.html">Curve Fitting</a>|</li>
  
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.
     </div>
   </body>
 </html>
