--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Larch &#8212; larch 0.9.37 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
@@ -140,8 +140,8 @@ upon which new analysis tools can be built.</p>
 <p>Currently, Larch provides a complete set of XAFS Analysis tools (replacing all
 of the Ifeffit package), has some support for visualizing and analyzing XRF
 and XRD maps, and has many extra tools for X-ray spectral analysis, data
-handling, and general-purpose data modeling.</p>
-<p>Larch includes a Python several applications.</p>
+handling, and general-purpose data modeling.  Larch includes a full
+scientific Python environment and several applications.</p>
 <p>The following table lists the main Larch applications.  New and
 in-development features and application will be explicitly described as
 “beta”.</p>
@@ -257,7 +257,7 @@ Foundation.</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
 </html>
