--- a/plotting/index.html
+++ b/plotting/index.html
@@ -10,7 +10,7 @@
     <title>7. Plotting and Displaying Data &#8212; larch 0.9.37 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
@@ -775,8 +775,8 @@ mathematical symbols and formulae.   A simple example would be:</p>
 as TeX-like markup, and so render the x and y labels as (for the pedantic,
 these renderings below may be only approximate):</p>
 <blockquote>
-<div><p><span class="math notranslate">\(k \rm(\AA^{-1})\)</span></p>
-<p><span class="math notranslate">\(\chi(k)\)</span></p>
+<div><p><span class="math notranslate nohighlight">\(k \rm(\AA^{-1})\)</span></p>
+<p><span class="math notranslate nohighlight">\(\chi(k)\)</span></p>
 </div></blockquote>
 <p>An important point here is the use of the backslash character, ‘', which
 you may recall from the tutorial is also used as an escape sequence.  Thus
@@ -985,7 +985,7 @@ matplotlib’s <code class="xref py py-func docutils literal notranslate"><span 
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
 </html>
