--- a/xrf/index.html
+++ b/xrf/index.html
@@ -10,7 +10,7 @@
     <title>11. X-ray Fluorescence Analysis with Larch &#8212; larch 0.9.37 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
@@ -119,7 +119,7 @@ progress, this chapter discusses some of the existing tools.</p>
 <p>Traditionally, XRF spectra have been measured with MCAs (Multi Channel
 Analyzers) which holds an array of intensities.  Because of this history,
 the two concepts are often mixed, and one often talks about MCA traces as
-being the same as XRF spectra.  To be sure, an XRF spectrum <span class="math notranslate">\(I(E)\)</span>
+being the same as XRF spectra.  To be sure, an XRF spectrum <span class="math notranslate nohighlight">\(I(E)\)</span>
 can be represented well with an MCA trace (intensities per bin) as long as
 one can convert bin number to energy.  Fortunately, most measurement
 systems in use have a linear relation (calibration) between bin number and
@@ -278,7 +278,7 @@ ROI definitions, calibration values, and related data.</li>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
 </html>
