--- a/fitting/examples.html
+++ b/fitting/examples.html
@@ -10,7 +10,7 @@
     <title>8.6. Fit Examples &#8212; larch 0.9.37 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
@@ -410,7 +410,7 @@ function:</p>
     <span class="n">wid3</span><span class="p">:</span>      <span class="mf">0.86847656</span> <span class="o">+/-</span> <span class="mf">0.056876</span> <span class="p">(</span><span class="mf">6.55</span><span class="o">%</span><span class="p">)</span> <span class="p">(</span><span class="n">init</span><span class="o">=</span> <span class="mf">1.2</span><span class="p">)</span>
 </pre></div>
 </div>
-<p>Adding the third peak here reduced <span class="math notranslate">\(\chi^2\)</span> by a factor of 10, from
+<p>Adding the third peak here reduced <span class="math notranslate nohighlight">\(\chi^2\)</span> by a factor of 10, from
 0.001276 to 0.000103, and so seems to be a significant improvement.
 Reduced chi-square also dropped by an order of magnitude and both the
 Akaike and Bayesian information criteria dropped by more than 100.  The
@@ -460,7 +460,7 @@ section, we simply change <code class="docutils literal notranslate"><span class
     <span class="n">wid3</span><span class="p">:</span>      <span class="mf">0.64297551</span> <span class="o">+/-</span> <span class="mf">0.047200</span> <span class="p">(</span><span class="mf">7.34</span><span class="o">%</span><span class="p">)</span> <span class="p">(</span><span class="n">init</span><span class="o">=</span> <span class="mf">1.2</span><span class="p">)</span>
 </pre></div>
 </div>
-<p>and we see that the already very low <span class="math notranslate">\(\chi^2\)</span> reduces by another 10%,
+<p>and we see that the already very low <span class="math notranslate nohighlight">\(\chi^2\)</span> reduces by another 10%,
 and improvements of the two information criteria.  which suggests a real
 improvement.  For completeness, the plots from this fit look like this:</p>
 <div class="figure compound align-center" id="fig-fit4comp">
@@ -952,7 +952,7 @@ found here.</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
 </html>
