--- a/fitting/fitpeaks.html
+++ b/fitting/fitpeaks.html
@@ -10,7 +10,7 @@
     <title>8.7. Simplified Peak Fitting with fit_peak() &#8212; larch 0.9.37 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="../_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
@@ -175,11 +175,11 @@ background functions, as detailed in
 </thead>
 <tbody valign="top">
 <tr class="row-even"><td>linear</td>
-<td><span class="math notranslate">\(y = mx + b\)</span></td>
+<td><span class="math notranslate nohighlight">\(y = mx + b\)</span></td>
 <td>offset, slope</td>
 </tr>
 <tr class="row-odd"><td>quadratic</td>
-<td><span class="math notranslate">\(y = a + bx + cx^2\)</span></td>
+<td><span class="math notranslate nohighlight">\(y = a + bx + cx^2\)</span></td>
 <td>offset, slope, quad</td>
 </tr>
 <tr class="row-even"><td>step</td>
@@ -191,7 +191,7 @@ background functions, as detailed in
 <td>height, center1, width1, center2, width2</td>
 </tr>
 <tr class="row-even"><td>exponential</td>
-<td><span class="math notranslate">\(y = Ae^{-x/b}\)</span></td>
+<td><span class="math notranslate nohighlight">\(y = Ae^{-x/b}\)</span></td>
 <td>amplitude, decay</td>
 </tr>
 <tr class="row-odd"><td>gaussian</td>
@@ -462,7 +462,7 @@ parameters, and allows building more complex models.</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2012.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
 </html>
