--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; larch 0.9.37 documentation</title>
+    <title>Index &#8212; larch 0.9.38 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -116,21 +116,23 @@
 </li>
       <li><a href="xafs/feffpaths.html#index-1">_feffdat File Group</a>
 </li>
-      <li><a href="data/index.html#module-_io">_io (module)</a>
+      <li><a href="data/index.html#module-_io">_io (module)</a>, <a href="data/index.html#module-_io">[1]</a>
 </li>
-      <li><a href="fitting/fitpeaks.html#module-_math">_math (module)</a>, <a href="fitting/index.html#module-_math">[1]</a>, <a href="fitting/minimize.html#module-_math">[2]</a>, <a href="fitting/parameters.html#module-_math">[3]</a>
+      <li><a href="data/index.html#module-_io.AthenaProject">_io.AthenaProject (module)</a>
 </li>
-      <li><a href="plotting/index.html#module-_plotter">_plotter (module)</a>
+      <li><a href="fitting/fitpeaks.html#module-_math">_math (module)</a>, <a href="fitting/index.html#module-_math">[1]</a>, <a href="fitting/minimize.html#module-_math">[2]</a>, <a href="fitting/parameters.html#module-_math">[3]</a>, <a href="xafs/xanes.html#module-_math">[4]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="plotting/index.html#module-_plotter">_plotter (module)</a>
+</li>
       <li><a href="tutorial/procedures.html#index-0">_sys variables</a>
 </li>
       <li><a href="fitting/parameters.html#index-0">_sys.fiteval</a>
 </li>
       <li><a href="xafs/feffpaths.html#index-5">_sys.fiteval with Feff paths</a>
 </li>
-      <li><a href="xafs/autobk.html#module-_xafs">_xafs (module)</a>, <a href="xafs/diffkk.html#module-_xafs">[1]</a>, <a href="xafs/feffit.html#module-_xafs">[2]</a>, <a href="xafs/feffpaths.html#module-_xafs">[3]</a>, <a href="xafs/index.html#module-_xafs">[4]</a>, <a href="xafs/utilities.html#module-_xafs">[5]</a>, <a href="xafs/wavelets.html#module-_xafs">[6]</a>, <a href="xafs/xafsft.html#module-_xafs">[7]</a>
+      <li><a href="xafs/autobk.html#module-_xafs">_xafs (module)</a>, <a href="xafs/diffkk.html#module-_xafs">[1]</a>, <a href="xafs/feffit.html#module-_xafs">[2]</a>, <a href="xafs/feffpaths.html#module-_xafs">[3]</a>, <a href="xafs/index.html#module-_xafs">[4]</a>, <a href="xafs/utilities.html#module-_xafs">[5]</a>, <a href="xafs/wavelets.html#module-_xafs">[6]</a>, <a href="xafs/xafsft.html#module-_xafs">[7]</a>, <a href="xafs/xanes.html#module-_xafs">[8]</a>
 </li>
       <li><a href="xray/index.html#module-_xray">_xray (module)</a>
 </li>
@@ -141,6 +143,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tutorial/builtins.html#abs">abs() (built-in function)</a>
+</li>
+      <li><a href="data/index.html#_io.AthenaProject.add_group">add_group() (in module _io.AthenaProject)</a>
 </li>
       <li><a href="tutorial/builtins.html#add_plugin">add_plugin() (built-in function)</a>
 </li>
@@ -159,6 +163,10 @@
       <li><a href="tutorial/arrays.html#index-1">array dtype</a>
 </li>
       <li><a href="tutorial/arrays.html#index-2">array methods</a>
+</li>
+      <li><a href="data/index.html#_io.AthenaProject.as_group">as_group() (in module _io.AthenaProject)</a>
+</li>
+      <li><a href="data/index.html#_io.AthenaProject">AthenaProject (class in _io)</a>
 </li>
       <li><a href="xray/index.html#_xray.atomic_density">atomic_density() (in module _xray)</a>
 </li>
@@ -236,6 +244,8 @@
 </li>
       <li><a href="xafs/feffpaths.html#index-4">Correlated Debye Model for sigma2</a>
 </li>
+      <li><a href="data/index.html#_io.create_athena">create_athena() (in module _io)</a>
+</li>
       <li><a href="tutorial/builtins.html#cwd">cwd() (built-in function)</a>
 </li>
   </ul></td>
@@ -272,13 +282,15 @@
 </li>
       <li><a href="tutorial/builtins.html#enumerate">enumerate() (built-in function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="xafs/utilities.html#_xafs.estimate_noise">estimate_noise() (in module _xafs)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="xafs/utilities.html#_xafs.etok">etok() (in module _xafs)</a>
 </li>
       <li><a href="xafs/feffpaths.html#index-2">EXAFS Equation with Feff</a>
+</li>
+      <li><a href="data/index.html#_io.extract_athenagroup">extract_athenagroup() (in module _io)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -436,10 +448,14 @@
 </li>
       <li><a href="tutorial/builtins.html#len">len() (built-in function)</a>
 </li>
-      <li><a href="fitting/lineshapes.html#index-0">lineshapes for fitting</a>
+      <li><a href="xafs/xanes.html#_math.lincombo_fit">lincombo_fit() (in module _math)</a>
+</li>
+      <li><a href="xafs/xanes.html#_math.lincombo_fitall">lincombo_fitall() (in module _math)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="fitting/lineshapes.html#index-0">lineshapes for fitting</a>
+</li>
       <li><a href="tutorial/builtins.html#list">list() (built-in function)</a>
 </li>
       <li><a href="fitting/lineshapes.html#lognormal">lognormal() (built-in function)</a>
@@ -532,6 +548,10 @@
 </li>
       <li><a href="tutorial/builtins.html#pause">pause() (built-in function)</a>
 </li>
+      <li><a href="xafs/xanes.html#_math.pca_fit">pca_fit() (in module _math)</a>
+</li>
+      <li><a href="xafs/xanes.html#_math.pca_train">pca_train() (in module _math)</a>
+</li>
       <li><a href="fitting/lineshapes.html#pearson7">pearson7() (built-in function)</a>
 </li>
       <li><a href="xafs/feffit.html#index-3">Phase-corrected Fourier transforms</a>, <a href="xafs/feffit.html#index-4">[1]</a>, <a href="xafs/feffit.html#index-5">[2]</a>
@@ -566,6 +586,8 @@
 </li>
       <li><a href="xafs/preedge.html#pre_edge">pre_edge() (built-in function)</a>
 </li>
+      <li><a href="xafs/preedge.html#pre_edge_baseline">pre_edge_baseline() (built-in function)</a>
+</li>
       <li><a href="data/index.html#_io.PV">PV() (in module _io)</a>
 </li>
       <li><a href="fitting/lineshapes.html#pvoigt">pvoigt() (built-in function)</a>
@@ -580,7 +602,11 @@
 </li>
       <li><a href="tutorial/builtins.html#raw_input">raw_input() (built-in function)</a>
 </li>
+      <li><a href="data/index.html#_io.AthenaProject.read">read() (in module _io.AthenaProject)</a>
+</li>
       <li><a href="data/index.html#_io.read_ascii">read_ascii() (in module _io)</a>
+</li>
+      <li><a href="data/index.html#_io.read_athena">read_athena() (in module _io)</a>
 </li>
       <li><a href="xrf/index.html#read_gsemca">read_gsemca() (built-in function)</a>
 </li>
@@ -592,10 +618,10 @@
 </li>
       <li><a href="data/index.html#_io.read_tiff">read_tiff() (in module _io)</a>
 </li>
-      <li><a href="data/index.html#_io.read_xdi">read_xdi() (in module _io)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="data/index.html#_io.read_xdi">read_xdi() (in module _io)</a>
+</li>
       <li><a href="tutorial/builtins.html#reduce">reduce() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#reload">reload() (built-in function)</a>
@@ -621,7 +647,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="data/index.html#_io.save">save() (in module _io)</a>
+
+      <ul>
+        <li><a href="data/index.html#_io.AthenaProject.save">(in module _io.AthenaProject)</a>
 </li>
+      </ul></li>
       <li><a href="plotting/index.html#_plotter.save_image">save_image() (in module _plotter)</a>
 </li>
       <li><a href="plotting/index.html#_plotter.save_plot">save_plot() (in module _plotter)</a>
@@ -782,7 +812,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright Matthew Newville, The University of Chicago, 2012.
+        &#169; Copyright Matthew Newville, The University of Chicago, 2018.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
