--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>5. Larch Tutorial &#8212; larch 0.9.37 documentation</title>
+    <title>5. Larch Tutorial &#8212; larch 0.9.38 documentation</title>
     <link rel="stylesheet" href="../_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="5.1. Tutorial: Getting Started" href="start.html" />
-    <link rel="prev" title="4.3. XAS_Viewer" href="../guis/xas_viewer.html" />
+    <link rel="prev" title="4.3. XASViewer" href="../guis/xasviewer.html" />
   <script type="text/x-mathjax-config">
      MathJax.Hub.Config({ "TeX": {Macros: {AA : "{\\unicode{x212B}}"}},
 			 "HTML-CSS": {scale: 90}});
@@ -52,7 +52,7 @@
           <a href="start.html" title="5.1. Tutorial: Getting Started"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../guis/xas_viewer.html" title="4.3. XAS_Viewer"
+          <a href="../guis/xasviewer.html" title="4.3. XASViewer"
              accesskey="P">previous</a> |</li>
    <li>[<a href="../index.html"> Larch Home</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
@@ -67,8 +67,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../guis/xas_viewer.html"
-                        title="previous chapter">4.3. XAS_Viewer</a></p>
+  <p class="topless"><a href="../guis/xasviewer.html"
+                        title="previous chapter">4.3. XASViewer</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="start.html"
                         title="next chapter">5.1. Tutorial: Getting Started</a></p>
@@ -193,7 +193,7 @@ Python, including tutorials, see the Python documentation at
           <a href="start.html" title="5.1. Tutorial: Getting Started"
              >next</a> |</li>
         <li class="right" >
-          <a href="../guis/xas_viewer.html" title="4.3. XAS_Viewer"
+          <a href="../guis/xasviewer.html" title="4.3. XASViewer"
              >previous</a> |</li>
    <li>[<a href="../index.html"> Larch Home</a>|</li>
    <li><a href="../getting_started.html"> Getting Started</a>|</li>
@@ -205,7 +205,7 @@ Python, including tutorials, see the Python documentation at
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright Matthew Newville, The University of Chicago, 2012.
+        &#169; Copyright Matthew Newville, The University of Chicago, 2018.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
     </div>
   </body>
